overflow fix

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-html {
-  transition: background-color 0.3s ease, color 0.3s ease;
+pre {
+  overflow-x: auto;
+  max-width: 100%;
+  word-wrap: break-word;
 }
+html,
 body {
-  font-family: "DM Sans", sans-serif;
-}
-.active {
-  background-color: #ffffff22;
-  font-weight: bold;
+  overflow-x: hidden;
 }
